[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connie"
version = "0.0.0"
description = "A CLI application that manages my working network."
readme = "README.md"
authors = [{name = "Daniele Di Bella", email = "daniele.dibella99@gmail.com"}]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
connie = "connie.main:cli"